--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+# mysql config
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/JSPO?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=JSPO
+spring.datasource.password=jspo1234!
+
+# mybatis config
+mybatis.config-location=classpath:mybatis-config.xml
+mybatis.type-aliases-package=com.jspo
+mybatis.mapper-locations=mybatis/mappers/*.xml
