--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/JSPO?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=JSPO
 spring.datasource.password=jspo1234!
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
 
 # mybatis config
 mybatis.config-location=classpath:mybatis-config.xml
