0128 [add & modify] 회원가입 & 이메일인증 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.freemarker.cache=false
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.type-aliases-package=com.jspo
 mybatis.mapper-locations=mybatis/mappers/*.xml
+
+# naver email
+spring.mail.host=smtp.naver.com
+spring.mail.port=465
+spring.mail.username=gosmdocheee@naver.com
+spring.mail.password=Dlrjstlsa1s2d3!
+spring.mail.properties.debug=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.naver.com
