0129 충돌해결중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,20 @@ spring.freemarker.cache=false
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.type-aliases-package=com.jspo
 mybatis.mapper-locations=mybatis/mappers/*.xml
+
+# naver email
+spring.mail.host=smtp.naver.com
+spring.mail.port=465
+spring.mail.username=gosmdocheee@naver.com
+spring.mail.password=Dlrjstlsa1s2d3!
+spring.mail.properties.debug=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.naver.com
+
+# naver-cloud-sms
+naver-cloud-sms.accessKey=clPna7hxL4V6MAnRnw62
+naver-cloud-sms.secretKey=OFaTzEzFaJ67pgCObgR4dlOXget1J6f013tH22RJ
+naver-cloud-sms.serviceId=ncp:sms:kr:300653925895:jspo_sms
+naver-cloud-sms.senderPhone=01034464487
