0202 [add & modify] 타임리프 레이아웃 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,29 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/JSPO?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=JSPO
 spring.datasource.password=jspo1234!
-spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 
 # mybatis config
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.type-aliases-package=com.jspo
 mybatis.mapper-locations=mybatis/mappers/*.xml
+
+# thymeleaf config -------------------------------------------------------------
+# Whether to enable a livereload.com-compatible server.
+spring.devtools.livereload.enabled=true
+
+# thymeleaf reference path
+# Prefix that gets prepended to view names when building a URL.
+# Suffix that gets appended to view names when building a URL.
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# thymeleaf cache configuration
+# Whether to enable template caching.
+spring.thymeleaf.cache=false 
+
+# Whether to check that the templates location exists.
+spring.thymeleaf.check-template-location=true
 
 # naver email
 spring.mail.host=smtp.naver.com
