--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,13 @@ naver-cloud-sms.accessKey=clPna7hxL4V6MAnRnw62
 naver-cloud-sms.secretKey=OFaTzEzFaJ67pgCObgR4dlOXget1J6f013tH22RJ
 naver-cloud-sms.serviceId=ncp:sms:kr:300653925895:jspo_sms
 naver-cloud-sms.senderPhone=01034464487
+
+#file upload
+spring.servlet.multipart.location=/resources/imgUpload/
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=1024MB
+
+
+file.dir=C:/Project/JSPO/src/main/resources/static/imgs/
+#file.dir=C:/javajungsuk3-master/javajungsuk3-master/PictureTest/src/main/resources/static/image/
+# ?? ??? ??? ??? ??? ??????? ?????
