--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,7 +49,7 @@ spring.servlet.multipart.location=/resources/imgUpload/
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=1024MB
 
-
-file.dir=C:/Project/JSPO/src/main/resources/static/imgs/
+file.dir=C:/jspo-project/src/main/resources/static/imgs/ 
+#file.dir=C:/Project/JSPO/src/main/resources/static/imgs/
 #file.dir=C:/javajungsuk3-master/javajungsuk3-master/PictureTest/src/main/resources/static/image/
 # ?? ??? ??? ??? ??? ??????? ?????
