0210 패치를 위한 커밋

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,7 +49,7 @@ spring.servlet.multipart.location=/Users/leekunsin/Desktop/jspo-fork/src/main/re
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=1024MB
 
-#??
+#jaecheol
 file.dir=C:/jspo-project/src/main/resources/static/imgs/
 
 #file.dir=C:/Project/JSPO/src/main/resources/static/imgs/
