--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,7 +57,7 @@ file.dir=C:/jspo-project/src/main/resources/static/imgs/
 #file.dir=C:/Project/JSPO/src/main/resources/static/imgs/
 
 #lee
-file.dir=/Users/leekunsin/Desktop/jspo-fork/src/main/resources/static/imgs/
+#file.dir=/Users/leekunsin/Desktop/jspo-fork/src/main/resources/static/imgs/
 
 
 
