--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,11 +53,11 @@ spring.servlet.multipart.max-request-size=1024MB
 #jaecheol
 #file.dir=C:/jspo-project/src/main/resources/static/imgs/
 
-ban
-file.dir=C:/Project/JSPO/src/main/resources/static/imgs/
+#ban
+#file.dir=C:/Project/JSPO/src/main/resources/static/imgs/
 
 #lee
-#file.dir=/Users/leekunsin/Desktop/jspo-fork/src/main/resources/static/imgs/
+file.dir=/Users/leekunsin/Desktop/jspo-fork/src/main/resources/static/imgs/
 
 
 
